2024-10-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-06-20  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to r-ci-setup action

2023-11-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.3

	* src/classicRcppParamsExample.cpp: Add "%s" to Rf_error() call
	* src/classicRcppVectorExample.cpp: Idem
	* src/classicRcppExample.cpp: Idem
	* src/classicRcppStringVectorExample.cpp: Idem
	* src/classicRcppMatrixExample.cpp: Idem
	* src/classicRcppDateExample.cpp: Idem

	* src/Makevars: Remove long superfluous Rcpp link instruction
	* src/Makevars.win: Idem

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4

2022-11-10  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2021-04-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Added to DESCRIPTION

2021-01-03  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci

2018-03-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.2

	* NAMESPACE: registered S3 print method for RcppExample

	* man/RcppDate.Rd: Update to https URL
	* man/RcppExample.Rd: Idem
	* man/RcppParams.Rd: Idem
	* inst/NEWS.Rd: Idem

	* src/init.c: Added R_init_* registration

	* R/RcppDateExample.R: Updated .Call thanks to registration
	* R/RcppExample.R: Idem
	* R/RcppMatrixExample.R: Idem
	* R/RcppParamsExample.R: Idem
	* R/RcppStringVectorExample.R: Idem
	* R/RcppVectorExample.R: Idem

2014-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Switch Depends: to Imports: for Rcpp, RcppClassic
	* NAMESPACE: Add import() for Rcpp, RcppClassic

2012-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.1

	* DESCRIPTION: Added versioned Depends: on current Rcpp, RcpClassic
	and R as this package cannot be built under older versions.

	* inst/NEWS.Rd: Added
